policies/red-hat-package-manager-in-image.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: red-hat-package-manager-in-image
spec:
  categories:
  - Security Best Practices
  criteriaLocked: true
  description: Alert on deployments with components of the Red Hat/Fedora/CentOS package
    management system.
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on deployment collector in namespace stackrox
    deployment:
      name: collector
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment sensor in namespace stackrox
    deployment:
      name: sensor
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment central in namespace stackrox
    deployment:
      name: central
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment admission-control in namespace stackrox
    deployment:
      name: admission-control
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on StackRox scanner
    deployment:
      name: scanner
      scope:
        cluster: ''
        namespace: ''
        label:
          key: app.kubernetes.io/name
          value: stackrox
    image: null
    expiration: null
  - name: Don't alert on RHACS operator controller
    deployment:
      name: rhacs-operator-controller-manager
      scope:
        cluster: ''
        namespace: ''
        label:
          key: app
          value: rhacs-operator
    image: null
    expiration: null
  - name: Don't alert on system namespaces
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: ^kube.*|^openshift.*|^redhat.*|^istio-system$
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment application-manager in namespace open-cluster-management-agent-addon
    deployment:
      name: application-manager
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment automation-controller-operator-controller-manager
      in namespace aap
    deployment:
      name: automation-controller-operator-controller-manager
      scope:
        cluster: ''
        namespace: aap
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment automation-hub-operator-controller-manager in
      namespace aap
    deployment:
      name: automation-hub-operator-controller-manager
      scope:
        cluster: ''
        namespace: aap
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cert-policy-controller in namespace open-cluster-management-agent-addon
    deployment:
      name: cert-policy-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-curator-controller in namespace multicluster-engine
    deployment:
      name: cluster-curator-controller
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-image-set-controller in namespace multicluster-engine
    deployment:
      name: cluster-image-set-controller
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager in namespace multicluster-engine
    deployment:
      name: cluster-manager
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager-placement-controller in namespace
      open-cluster-management-hub
    deployment:
      name: cluster-manager-placement-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-hub
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager-registration-controller in namespace
      open-cluster-management-hub
    deployment:
      name: cluster-manager-registration-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-hub
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager-registration-webhook in namespace
      open-cluster-management-hub
    deployment:
      name: cluster-manager-registration-webhook
      scope:
        cluster: ''
        namespace: open-cluster-management-hub
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-manager-work-webhook in namespace open-cluster-management-hub
    deployment:
      name: cluster-manager-work-webhook
      scope:
        cluster: ''
        namespace: open-cluster-management-hub
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy in namespace multicluster-engine
    deployment:
      name: cluster-proxy
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy-addon-manager in namespace multicluster-engine
    deployment:
      name: cluster-proxy-addon-manager
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy-addon-user in namespace multicluster-engine
    deployment:
      name: cluster-proxy-addon-user
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy-proxy-agent in namespace open-cluster-management-agent-addon
    deployment:
      name: cluster-proxy-proxy-agent
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment cluster-proxy-service-proxy in namespace open-cluster-management-agent-addon
    deployment:
      name: cluster-proxy-service-proxy
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment clusterclaims-controller in namespace multicluster-engine
    deployment:
      name: clusterclaims-controller
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment clusterlifecycle-state-metrics-v2 in namespace
      multicluster-engine
    deployment:
      name: clusterlifecycle-state-metrics-v2
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment config-policy-controller in namespace open-cluster-management-agent-addon
    deployment:
      name: config-policy-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment console-chart-console-v2 in namespace open-cluster-management
    deployment:
      name: console-chart-console-v2
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment console-mce-console in namespace multicluster-engine
    deployment:
      name: console-mce-console
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment discovery-operator in namespace multicluster-engine
    deployment:
      name: discovery-operator
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment governance-policy-framework in namespace open-cluster-management-agent-addon
    deployment:
      name: governance-policy-framework
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment grc-policy-addon-controller in namespace open-cluster-management
    deployment:
      name: grc-policy-addon-controller
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment grc-policy-propagator in namespace open-cluster-management
    deployment:
      name: grc-policy-propagator
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment hive-clustersync in namespace hive
    deployment:
      name: hive-clustersync
      scope:
        cluster: ''
        namespace: hive
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment hive-controllers in namespace hive
    deployment:
      name: hive-controllers
      scope:
        cluster: ''
        namespace: hive
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment hive-operator in namespace multicluster-engine
    deployment:
      name: hive-operator
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment hiveadmission in namespace hive
    deployment:
      name: hiveadmission
      scope:
        cluster: ''
        namespace: hive
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment iam-policy-controller in namespace open-cluster-management-agent-addon
    deployment:
      name: iam-policy-controller
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment infrastructure-operator in namespace multicluster-engine
    deployment:
      name: infrastructure-operator
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment insights-client in namespace open-cluster-management
    deployment:
      name: insights-client
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment insights-metrics in namespace open-cluster-management
    deployment:
      name: insights-metrics
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet in namespace open-cluster-management-agent
    deployment:
      name: klusterlet
      scope:
        cluster: ''
        namespace: open-cluster-management-agent
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-addon-controller-v2 in namespace open-cluster-management
    deployment:
      name: klusterlet-addon-controller-v2
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-addon-search in namespace open-cluster-management-agent-addon
    deployment:
      name: klusterlet-addon-search
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-addon-workmgr in namespace open-cluster-management-agent-addon
    deployment:
      name: klusterlet-addon-workmgr
      scope:
        cluster: ''
        namespace: open-cluster-management-agent-addon
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-registration-agent in namespace open-cluster-management-agent
    deployment:
      name: klusterlet-registration-agent
      scope:
        cluster: ''
        namespace: open-cluster-management-agent
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment klusterlet-work-agent in namespace open-cluster-management-agent
    deployment:
      name: klusterlet-work-agent
      scope:
        cluster: ''
        namespace: open-cluster-management-agent
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment managedcluster-import-controller-v2 in namespace
      multicluster-engine
    deployment:
      name: managedcluster-import-controller-v2
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multicluster-engine-operator in namespace multicluster-engine
    deployment:
      name: multicluster-engine-operator
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multicluster-observability-operator in namespace
      open-cluster-management
    deployment:
      name: multicluster-observability-operator
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multicluster-operators-application in namespace
      open-cluster-management
    deployment:
      name: multicluster-operators-application
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multicluster-operators-channel in namespace open-cluster-management
    deployment:
      name: multicluster-operators-channel
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multicluster-operators-hub-subscription in namespace
      open-cluster-management
    deployment:
      name: multicluster-operators-hub-subscription
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multicluster-operators-standalone-subscription
      in namespace open-cluster-management
    deployment:
      name: multicluster-operators-standalone-subscription
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multicluster-operators-subscription-report in
      namespace open-cluster-management
    deployment:
      name: multicluster-operators-subscription-report
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment multiclusterhub-operator in namespace open-cluster-management
    deployment:
      name: multiclusterhub-operator
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ocm-controller in namespace multicluster-engine
    deployment:
      name: ocm-controller
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ocm-proxyserver in namespace multicluster-engine
    deployment:
      name: ocm-proxyserver
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment ocm-webhook in namespace multicluster-engine
    deployment:
      name: ocm-webhook
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment provider-credential-controller in namespace multicluster-engine
    deployment:
      name: provider-credential-controller
      scope:
        cluster: ''
        namespace: multicluster-engine
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment resource-operator-controller-manager in namespace
      aap
    deployment:
      name: resource-operator-controller-manager
      scope:
        cluster: ''
        namespace: aap
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-api in namespace open-cluster-management
    deployment:
      name: search-api
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-collector in namespace open-cluster-management
    deployment:
      name: search-collector
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-indexer in namespace open-cluster-management
    deployment:
      name: search-indexer
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-postgres in namespace open-cluster-management
    deployment:
      name: search-postgres
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment search-v2-operator-controller-manager in namespace
      open-cluster-management
    deployment:
      name: search-v2-operator-controller-manager
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment submariner-addon in namespace open-cluster-management
    deployment:
      name: submariner-addon
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  - name: Don't alert on deployment volsync-addon-controller in namespace open-cluster-management
    deployment:
      name: volsync-addon-controller
      scope:
        cluster: ''
        namespace: open-cluster-management
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - BUILD
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Red Hat Package Manager in Image
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Image Component
      booleanOperator: OR
      negate: false
      values:
      - value: rpm|microdnf|dnf|yum=
  rationale: Package managers make it easier for attackers to use compromised containers,
    since they can easily add software.
  remediation: Run `rpm -e --nodeps $(rpm -qa '*rpm*' '*dnf*' '*libsolv*' '*hawkey*'
    'yum*')` in the image build for production containers.
  scope: []
  severity: LOW_SEVERITY
  disabled: false
